# match

./: .env.example  .gitignore  AI_Matchmaker_Development_Guide.md  CONVERSATION_HISTORY_FEATURE.md  CONVERSATION_HISTORY_UPDATE.md  DASHBOARD_API_FIX.md  DASHBOARD_API_TEST_GUIDE.md  DASHBOARD_FIX_COMPLETE.md  DIRECT_MESSAGING_FROM_MATCHES_FIX.md  ENUM_TYPE_FIX.md  FINAL_VERIFICATION_REPORT.md  FIXES_COMPLETED.md  GEMINI_API_KEY_IMPLEMENTATION_SUMMARY.md  GEMINI_QUOTA_FIX_SUMMARY.md  I18N_COMPLETE_SUMMARY.md  I18N_FINAL_REPORT.md  I18N_IMPLEMENTATION_COMPLETE.md  I18N_IMPLEMENTATION_SUMMARY.md  I18N_PAGES_COMPLETE.md  I18N_PAGES_UPDATE_COMPLETE.md  I18N_QUICK_REFERENCE.md  I18N_WORK_COMPLETE.md  INTERNATIONALIZATION_AND_ACCESSIBILITY_IMPLEMENTATION.md  LANGUAGE_SWITCHING_DEBUG.md  MATCH_DISCOVERY_FIX.md  Makefile  NOTIFICATION_AND_MESSAGING_IMPLEMENTATION.md  PAGES_I18N_UPDATE_SUMMARY.md  PERSONALITY_ASSESSMENT_I18N_完成.md  QUICK_START.md  QUOTA_ERROR_HANDLING_IMPROVEMENTS.md  README.md  TEST_CONVERSATION_HISTORY.md  WEBSOCKET_FIX.md  WEBSOCKET_GUIDE.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  requirements.txt  test_dashboard_api.py  (+3 more)
.claude/: settings.local.json
.github/workflows/: ci.yml  security.yml
ai_matchmaker/: __init__.py  cli.py
ai_matchmaker/agents/: __init__.py
ai_matchmaker/communication/: __init__.py
ai_matchmaker/controllers/: __init__.py
ai_matchmaker/localization/: __init__.py
ai_matchmaker/memory/: __init__.py
ai_matchmaker/models/: __init__.py  conversations.py  enums.py  profiles.py  scenarios.py
backend/: AI_CHAT_EXIT_FIX.md  AI_MODEL_CONFIG.md  DATABASE_FIX_README.md  Dockerfile  GEMINI_API_KEY_FEATURE.md  add_gemini_api_key_column.sql  alembic.ini  check_users.py  create_scenario_tables.sql  diagnose_matches.py  fix_conversation_messages.sql  fix_db_schema.py  fix_scenario_table.sql  fix_sender_id.py  fix_user_verification.py  health_check.py  main.py  manage_db.py  manage_redis.py  migrate_add_gemini_key.py  quick_fix.sql  run_migration.py  test_ai_chat_integration.py  test_conversation_duration.py  test_core_functionality.py  test_database_fix.py  test_full_gemini_flow.py  test_gemini_key_feature.py  test_summary.py  test_system_functionality.py  test_websocket_ai_integration.py
config/: mem0_config.yaml
frontend/: .eslintrc.cjs  Dockerfile  Dockerfile.dev  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
nginx/: default.conf  nginx.conf
scripts/: check-setup.bat  create-scenario-tables.bat  fix-scenario-table.bat  init-db.sql  install-redis.bat  migrate-db.bat  migrate-simple.py  restart-backend.sh  seed-scenarios.bat  setup-dev.bat  setup-dev.sh  setup-scenarios.bat  start-backend.bat  start-backend.sh  start-dev.bat  start-frontend.bat  start-frontend.sh  status-backend.sh  stop-backend.sh  test-backend-imports.py  test-basic.bat  test-basic.py  test-config.py  test-connections.bat  test-simple.py  update-deps.bat  view-backend-logs.sh
tests/: __init__.py  test_project_structure.py
(+173 files in other folders)
